ajout patch et post exercice 3
a finir
